--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Blogger</title>
+        <title>Blogger - Home</title>
+        <!-- Icon -->
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="./assets/images/logo/logo-favicon.png"
+        />
         <!-- Stylesheets -->
         <link rel="stylesheet" href="./css/bootstrap.css" />
         <link
@@ -39,12 +45,15 @@
                         <div class="container-xl">
                             <!-- Logo  -->
                             <a href="index.html" class="navbar-brand">
-                                <img src="./assets/images/logo.png" alt="" />
+                                <img
+                                    src="./assets/images/logo/logo.png"
+                                    alt=""
+                                />
                             </a>
 
                             <div class="collapse navbar-collapse">
                                 <ul class="navbar-nav mr-auto">
-                                    <li class="nav-item dropdown active">
+                                    <li class="nav-item dropdown">
                                         <a
                                             href="index.html"
                                             class="nav-link dropdown-toggle"
@@ -94,12 +103,7 @@
                                         >
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#latest" class="nav-link"
-                                            >Latest</a
-                                        >
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link"
+                                        <a href="about.html" class="nav-link"
                                             >About Us</a
                                         >
                                     </li>
@@ -1461,7 +1465,7 @@
                                     <div class="widget rounded">
                                         <div class="widget-about text-center">
                                             <img
-                                                src="./assets/images/logo.png"
+                                                src="./assets/images/logo/logo.png"
                                                 alt=""
                                                 class="logo"
                                             />
@@ -2013,11 +2017,11 @@
                 ></button>
 
                 <div class="logo">
-                    <img src="./assets/images/logo.png" alt="" />
+                    <img src="./assets/images/logo/logo.png" alt="" />
                 </div>
                 <nav>
                     <ul class="vertical-menu">
-                        <li class="active">
+                        <li>
                             <a href="index.html">Home</a>
                             <ul class="submenu">
                                 <li><a href="#">Technology</a></li>
@@ -2031,10 +2035,7 @@
                             <a href="#trending" class="nav-link">Trending</a>
                         </li>
                         <li>
-                            <a href="#latest" class="nav-link">Latest</a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link">About Us</a>
+                            <a href="about.html" class="nav-link">About Us</a>
                         </li>
                         <li>
                             <a href="#" class="nav-link">Contact Us</a>
