Fixed Bug in Navigation

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                                 <ul class="navbar-nav mr-auto">
                                     <li class="nav-item dropdown">
                                         <a
-                                            href="index.html"
+                                            href="./index.html"
                                             class="nav-link dropdown-toggle"
                                             >Home</a
                                         >
@@ -98,12 +98,14 @@
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#trending" class="nav-link"
+                                        <a
+                                            href="./index.html#trending"
+                                            class="nav-link"
                                             >Trending</a
                                         >
                                     </li>
                                     <li class="nav-item">
-                                        <a href="about.html" class="nav-link"
+                                        <a href="./about.html" class="nav-link"
                                             >About Us</a
                                         >
                                     </li>
@@ -387,7 +389,7 @@
                 <nav>
                     <ul class="vertical-menu">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="./index.html">Home</a>
                             <ul class="submenu">
                                 <li><a href="#">Technology</a></li>
                                 <li><a href="#">Fashion</a></li>
@@ -397,10 +399,12 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#trending" class="nav-link">Trending</a>
+                            <a href="./index.html#trending" class="nav-link"
+                                >Trending</a
+                            >
                         </li>
                         <li>
-                            <a href="about.html" class="nav-link">About Us</a>
+                            <a href="./about.html" class="nav-link">About Us</a>
                         </li>
                         <li>
                             <a href="#" class="nav-link">Contact Us</a>
