--- a/index.html
+++ b/index.html
@@ -98,20 +98,15 @@
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a
-                                            href="./index.html#trending"
-                                            class="nav-link"
-                                            >Trending</a
-                                        >
-                                    </li>
-                                    <li class="nav-item">
                                         <a href="./about.html" class="nav-link"
                                             >About Us</a
                                         >
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link"
-                                            >Contact Us</a
+                                        <a
+                                            href="./support.html"
+                                            class="nav-link"
+                                            >Support</a
                                         >
                                     </li>
                                 </ul>
@@ -181,7 +176,7 @@
                                         </h2>
                                         <ul class="meta list-inline mb-0">
                                             <li class="list-inline-item">
-                                                <a href="#">John Doe</a>
+                                                <a href="#">Akshut Goyal</a>
                                             </li>
                                             <li class="list-inline-item">
                                                 12 November 2022
@@ -587,7 +582,7 @@
                                                                 src="./assets/images/other/author-sm.jpg"
                                                                 alt=""
                                                             />
-                                                            John Doe
+                                                            Akshut Goyal
                                                         </a>
                                                     </li>
                                                     <li
@@ -821,7 +816,7 @@
                                                                 class="author"
                                                                 alt=""
                                                             />
-                                                            John Doe
+                                                            Akshut Goyal
                                                         </a>
                                                     </li>
                                                     <li
@@ -947,7 +942,7 @@
                                                                 class="author"
                                                                 alt=""
                                                             />
-                                                            John Doe
+                                                            Akshut Goyal
                                                         </a>
                                                     </li>
                                                     <li
@@ -1083,7 +1078,7 @@
                                             </h4>
                                             <ul class="meta list-inline mb-0">
                                                 <li class="list-inline-item">
-                                                    <a href="#">John Doe</a>
+                                                    <a href="#">Akshut Goyal</a>
                                                 </li>
                                                 <li class="list-inline-item">
                                                     13 November 2022
@@ -1117,7 +1112,7 @@
                                             </h4>
                                             <ul class="meta list-inline mb-0">
                                                 <li class="list-inline-item">
-                                                    <a href="#">John Doe</a>
+                                                    <a href="#">Akshut Goyal</a>
                                                 </li>
                                                 <li class="list-inline-item">
                                                     13 November 2022
@@ -1151,7 +1146,7 @@
                                             </h4>
                                             <ul class="meta list-inline mb-0">
                                                 <li class="list-inline-item">
-                                                    <a href="#">John Doe</a>
+                                                    <a href="#">Akshut Goyal</a>
                                                 </li>
                                                 <li class="list-inline-item">
                                                     14 November 2022
@@ -1214,7 +1209,7 @@
                                                                     class="author"
                                                                     alt=""
                                                                 />
-                                                                John Doe
+                                                                Akshut Goyal
                                                             </a>
                                                         </li>
                                                         <li
@@ -1350,7 +1345,7 @@
                                                                     class="author"
                                                                     alt=""
                                                                 />
-                                                                John Doe
+                                                                Akshut Goyal
                                                             </a>
                                                         </li>
                                                         <li
@@ -1733,7 +1728,7 @@
                                                 class="newsletter-headline text-center mb0"
                                                 >Join 75,000 Subscribers!</span
                                             >
-                                            <form action="#">
+                                            <form>
                                                 <div class="mb-2">
                                                     <input
                                                         type="email"
@@ -1745,6 +1740,7 @@
                                                 </div>
                                                 <button
                                                     class="btn btn-default btn-full"
+                                                    type="button"
                                                 >
                                                     Sign Up
                                                 </button>
@@ -1801,7 +1797,7 @@
                                                             class="list-inline-item"
                                                         >
                                                             <a href="#"
-                                                                >John Doe</a
+                                                                >Akshut Goyal</a
                                                             >
                                                         </li>
                                                         <li
@@ -1843,7 +1839,7 @@
                                                             class="list-inline-item"
                                                         >
                                                             <a href="#"
-                                                                >John Doe</a
+                                                                >Akshut Goyal</a
                                                             >
                                                         </li>
                                                         <li
@@ -1885,7 +1881,7 @@
                                                             class="list-inline-item"
                                                         >
                                                             <a href="#"
-                                                                >John Doe</a
+                                                                >Akshut Goyal</a
                                                             >
                                                         </li>
                                                         <li
@@ -2034,15 +2030,12 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="./index.html#trending" class="nav-link"
-                                >Trending</a
-                            >
-                        </li>
-                        <li>
                             <a href="./about.html" class="nav-link">About Us</a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">Contact Us</a>
+                            <a href="./support.html" class="nav-link"
+                                >Support</a
+                            >
                         </li>
                     </ul>
                 </nav>
