--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Blogger - Home</title>
+        <title>Bloggers Hub - Home</title>
         <!-- Icon -->
         <link
             rel="icon"
@@ -1954,7 +1954,8 @@
                             <div class="row d-flex align-items-center gy-4">
                                 <div class="col-md-4">
                                     <span class="copyright"
-                                        >&copy; Copyright 2022 Blogger</span
+                                        >&copy; Copyright 2022 Bloggers
+                                        Hub</span
                                     >
                                 </div>
                                 <div class="col-md-4 text-center">
