--- a/support.html
+++ b/support.html
@@ -186,8 +186,7 @@
                                                     ></i>
                                                 </span>
                                                 <span
-                                                    >akshutgoyal@Bloggers
-                                                    Hub.com</span
+                                                    >akshutgoyal@bloggershub.com</span
                                                 >
                                             </li>
                                             <li>
