--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Bloggers Hub - Home</title>
         <!-- Icon -->
         <link
@@ -1951,6 +1951,22 @@
                 <footer>
                     <div class="container-xl">
                         <div class="footer-inner">
+                            <div
+                                class="row d-flex align-items-center gy-4 text-center"
+                            >
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <a href="./privacy-policy.html"
+                                            >Privacy Policy</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="./terms-of-use.html"
+                                            >Terms of Use</a
+                                        >
+                                    </li>
+                                </ul>
+                            </div>
                             <div class="row d-flex align-items-center gy-4">
                                 <div class="col-md-4">
                                     <span class="copyright"
