--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -183,16 +183,10 @@
                                         improve the Service. By using the
                                         Service, You agree to the collection and
                                         use of information in accordance with
-                                        this Privacy Policy. This Privacy Policy
-                                        has been created with the help of the
-                                        <a
-                                            href="https://www.termsfeed.com/privacy-policy-generator/"
-                                            target="_blank"
-                                            >TermsFeed Privacy Policy
-                                            Generator</a
-                                        >.
+                                        this Privacy Policy.
                                     </p>
                                 </div>
+
                                 <div class="section-header">
                                     <h1 class="section-title">
                                         Interpretation and Definitions
@@ -1026,6 +1020,22 @@
                 <footer>
                     <div class="container-xl">
                         <div class="footer-inner">
+                            <div
+                                class="row d-flex align-items-center gy-4 text-center"
+                            >
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <a href="./privacy-policy.html"
+                                            >Privacy Policy</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="./terms-of-use.html"
+                                            >Terms of Use</a
+                                        >
+                                    </li>
+                                </ul>
+                            </div>
                             <div class="row d-flex align-items-center gy-4">
                                 <div class="col-md-4">
                                     <span class="copyright"
