--- a/support.html
+++ b/support.html
@@ -365,6 +365,22 @@
                 <footer>
                     <div class="container-xl">
                         <div class="footer-inner">
+                            <div
+                                class="row d-flex align-items-center gy-4 text-center"
+                            >
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <a href="./privacy-policy.html"
+                                            >Privacy Policy</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="./terms-of-use.html"
+                                            >Terms of Use</a
+                                        >
+                                    </li>
+                                </ul>
+                            </div>
                             <div class="row d-flex align-items-center gy-4">
                                 <div class="col-md-4">
                                     <span class="copyright"
