--- a/index.html
+++ b/index.html
@@ -1749,7 +1749,9 @@
                                                 class="newsletter-privacy text-center mt-3"
                                             >
                                                 By signing up, you agree to our
-                                                <a href="#">Privacy Policy</a>
+                                                <a href="./privacy-policy.html"
+                                                    >Privacy Policy</a
+                                                >
                                             </span>
                                         </div>
                                     </div>
