Register - Login Page

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -109,6 +109,13 @@
                                             >Support</a
                                         >
                                     </li>
+                                    <li class="nav-item">
+                                        <a
+                                            href="./register.html"
+                                            class="nav-link"
+                                            >Register Now</a
+                                        >
+                                    </li>
                                 </ul>
                             </div>
                             <!-- Right Section Header -->
@@ -1121,6 +1128,11 @@
                         <li>
                             <a href="./support.html" class="nav-link"
                                 >Support</a
+                            >
+                        </li>
+                        <li>
+                            <a href="./register.html" class="nav-link"
+                                >Register Now</a
                             >
                         </li>
                     </ul>
