--- a/support.html
+++ b/support.html
@@ -110,6 +110,13 @@
                                             >Support</a
                                         >
                                     </li>
+                                    <li class="nav-item">
+                                        <a
+                                            href="./register.html"
+                                            class="nav-link"
+                                            >Register Now</a
+                                        >
+                                    </li>
                                 </ul>
                             </div>
                             <!-- Right Section Header -->
@@ -466,6 +473,11 @@
                         <li>
                             <a href="./support.html" class="nav-link"
                                 >Support</a
+                            >
+                        </li>
+                        <li>
+                            <a href="./register.html" class="nav-link"
+                                >Register Now</a
                             >
                         </li>
                     </ul>
