--- a/register.html
+++ b/register.html
@@ -255,11 +255,11 @@
                         <div class="panels-container">
                             <div class="panel left-panel">
                                 <div class="content">
-                                    <h3>New here ?</h3>
+                                    <h3>New here?</h3>
                                     <p>
-                                        Lorem ipsum, dolor sit amet consectetur
-                                        adipisicing elit. Debitis, ex ratione.
-                                        Aliquid!
+                                        A few clicks away from creating your
+                                        blog post. Register yourself and start
+                                        writing.
                                     </p>
                                     <button
                                         class="btn transparent"
@@ -278,9 +278,8 @@
                                 <div class="content">
                                     <h3>One of us ?</h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur
-                                        adipisicing elit. Nostrum laboriosam ad
-                                        deleniti.
+                                        To Keep connected with us, please login
+                                        with your personal information.
                                     </p>
                                     <button
                                         class="btn transparent"
@@ -299,25 +298,9 @@
                     </div>
                 </section>
 
-                <footer class="mt-0">
+                <footer>
                     <div class="container-xl">
                         <div class="footer-inner">
-                            <div
-                                class="row d-flex align-items-center gy-4 text-center"
-                            >
-                                <ul class="list-unstyled">
-                                    <li>
-                                        <a href="./privacy-policy.html"
-                                            >Privacy Policy</a
-                                        >
-                                    </li>
-                                    <li>
-                                        <a href="./terms-of-use.html"
-                                            >Terms of Use</a
-                                        >
-                                    </li>
-                                </ul>
-                            </div>
                             <div class="row d-flex align-items-center gy-4">
                                 <div class="col-md-4">
                                     <span class="copyright"
@@ -326,37 +309,18 @@
                                     >
                                 </div>
                                 <div class="col-md-4 text-center">
-                                    <div
-                                        class="social-icons list-unstyled list-inline mb-0"
-                                    >
-                                        <li class="list-inline-item">
-                                            <a href="#">
-                                                <i
-                                                    class="fab fa-facebook-f"
-                                                ></i>
-                                            </a>
+                                    <ul class="list-unstyled">
+                                        <li>
+                                            <a href="./privacy-policy.html"
+                                                >Privacy Policy</a
+                                            >
                                         </li>
-                                        <li class="list-inline-item">
-                                            <a href="#">
-                                                <i class="fab fa-instagram"></i>
-                                            </a>
+                                        <li>
+                                            <a href="./terms-of-use.html"
+                                                >Terms of Use</a
+                                            >
                                         </li>
-                                        <li class="list-inline-item">
-                                            <a href="#">
-                                                <i class="fab fa-pinterest"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                            <a href="#">
-                                                <i class="far fa-envelope"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                            <a href="#">
-                                                <i class="fab fa-twitter"></i>
-                                            </a>
-                                        </li>
-                                    </div>
+                                    </ul>
                                 </div>
                                 <div class="col-md-4">
                                     <a
