--- a/about.html
+++ b/about.html
@@ -240,7 +240,7 @@
                             <!-- Left Part -->
                             <div class="col-lg-8">
                                 <div class="padding-30 rounded bordered">
-                                    <h6 class="post-title lh-base fw-normal">
+                                    <h6 class="lh-base fw-normal">
                                         Bloggers Hub, An open platform providing
                                         you a place to share your knowledge,
                                         experience, latest news, creations or
