--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >No Code Softwares
                                                             to Create
@@ -305,7 +305,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >Best Men's Fashion
                                                             & Style</a
@@ -337,7 +337,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >Upcoming Movies
                                                             That Will Change The
@@ -370,7 +370,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >Amazing Health
                                                             Benefits of Playing
@@ -412,7 +412,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >Crockery Sets One
                                                             Should Buy</a
@@ -444,7 +444,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >Best Programming
                                                             Languages For
@@ -477,7 +477,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >Is Bitcoin A Good
                                                             Investment?</a
@@ -509,7 +509,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >Learn Fashion
                                                             Designing At Minimal
@@ -621,7 +621,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#">
                                                             Interior trends in
                                                             corporate space to
@@ -653,7 +653,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#">
                                                             Top 10 Programming
                                                             Languages SpaceX
@@ -686,7 +686,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#">
                                                             How to host a
                                                             waste-free
@@ -719,7 +719,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#">
                                                             Books that make you
                                                             moneywise.
@@ -824,7 +824,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#">
                                                             Make delicious
                                                             mocktails this
@@ -856,7 +856,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#">
                                                             Is the global
                                                             decline in democracy
@@ -948,7 +948,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >Beginner Archery
                                                             for Adults</a
@@ -979,7 +979,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >Long coats for
                                                             women: Fashion
@@ -1513,7 +1513,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >NASA Explains Why
                                                             Moon Turns Red
@@ -1550,7 +1550,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >Rockets to Uncover
                                                             Electric Circuit
@@ -1587,7 +1587,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >Studio Sofield
                                                             completes interiors
@@ -1625,7 +1625,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="details clearfix">
-                                                    <h6 class="post-title my-0">
+                                                    <h6 class="my-0">
                                                         <a href="#"
                                                             >Gold: Significant
                                                             Signals Appearing
