--- a/blog-page-2.html
+++ b/blog-page-2.html
@@ -205,7 +205,7 @@
                                                     class="breadcrumb-item active"
                                                     aria-current="page"
                                                 >
-                                                    <a href="./blog-page.html"
+                                                    <a href="./blog-page-2.html"
                                                         >Article 2</a
                                                     >
                                                 </li>
