--- a/index.html
+++ b/index.html
@@ -1578,7 +1578,7 @@
                                                         >1</span
                                                     >
                                                     <a
-                                                        href="./blog-page-1.htmls"
+                                                        href="./blog-page-1.html"
                                                     >
                                                         <div class="inner">
                                                             <img
