--- a/blog-page-1.html
+++ b/blog-page-1.html
@@ -204,7 +204,7 @@
                                                     class="breadcrumb-item active"
                                                     aria-current="page"
                                                 >
-                                                    <a href="./blog-page.html"
+                                                    <a href="./blog-page-1.html"
                                                         >Article 1</a
                                                     >
                                                 </li>
